--- a/css/general.css
+++ b/css/general.css
@@ -206,8 +206,8 @@ strong{
 *:focus{
   outline: none; 
   
-  box-shadow:  0 0 0 0.8rem  rgba(230, 125, 34, 0.5)
-  ;
+  box-shadow:  0 0 0 0.8rem  rgba(230, 125, 34, 0.5);
+  
 }
 
 .btn--form:hover{
